--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ canvas {
   }
 
   .section-heading {
-    @apply text-gray lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20
+    @apply text-gray lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-0 md:mb-5 font-medium opacity-0 translate-y-20
   }
 
   .feature-text {
@@ -79,7 +79,7 @@ canvas {
   }
 
   .link {
-    @apply text-blue hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20
+    @apply text-blue hover:underline cursor-pointer flex items-center text-sm md:text-xl opacity-0 translate-y-20
   }
 
   .control-btn {
